--- a/ProjectPlan/main.tex
+++ b/ProjectPlan/main.tex
@@ -34,6 +34,7 @@ doi=false,isbn=false,url=false,eprint=false]{biblatex}
 
 
 \DeclareMathOperator{\vect}{vec}
+\DeclareMathOperator{\rank}{rank}
 
 %================================================================================
 %================================= TITLE PAGE ===================================
@@ -59,13 +60,14 @@ As the matrices for fully connected layers get larger the evaluation of the neur
 Therefore different approaches to reduce the computational cost are being explored.
 
 A possible representation are Sequentially Semiseperable Matrices. These have a certain underling structure.
+The structure of the sequentially semiseperabel matrix is often informed by a underlying physical system or the construction of the matrix.
 The matrices in Neuronal Networks do not necessarily have the same underling structure.
 Even if the Matrix is close the to a Sequentially Semiseperable Matrix the structural Parameters might not be know.
 
-To increase the number of Matrices that can be represented we allow combinations of Sequentially Semiseperable Matrices.
-This means that a Matrix can also be represented as as sum of multiple Sequentially Semiseperable Matricies.
+To increase the number of Matrices that can be represented we also allow combinations of Sequentially Semiseperable Matrices.
 
-To represent the matrices, an algorithm to derive the representation is needed.
+To represent the matrices, possible algorithms to derive the representation are investigated and tested.
+%To represent the matrices, an algorithm to derive the representation is needed.
 	%\item Both approxiamtion of Matrix in some Norm ($\|\|_F$,$\|\|_1$,$\|\|_\infty$ or similar) also Accuracy on Data set
 
 
@@ -100,54 +102,83 @@ These assumptions and properties are underlying the idea:
 	\item To get the optimal trade of between accuracy and cost it should be possible to adapt the accuracy of the approximation by changing hyper parameters of the approximation.
 \end{itemize}
 
-By fixing the input and output Dimensions of an a State-Space representation we fix an segmentation of the representable matrices.
-The matrices in a neuronal net might not have an underling structure that can be represented with the resulting segmentation.
+State-Space representation have many hyperparameters like input and output dimensions, these have to be chosen. By setting the input and output dimensions representation we fix an segmentation of the representable matrices.
 
-Therefore it might be interesting if the Matrices in an neural net can be better described with a sum of Matrices.
+The matrices in a neuronal net might not have an underling structure that can be represented.
+Therefore it might be interesting if the Matrices in an neural net can be better described with combinations of different representations.
+This might be the sum of state-space representations. These might have the same or different input and output dimensions.
+
+It might be also interesting to use permutations of the input and output to obtain segments with low rank.
 
 A similar representation with products of SSS Representations with non matching output and input dimensions might also be possible, but is harder to describe.
 
-
-\subsubsection*{Next steps}
-
+\subsubsection*{Segmentation}
 One prerequisite is finding appropriate segmentation of the Matrix. This either includes finding a existing way of finding a segmentation and implementing it.
 Or coming up with a an algorithm to segment a matrix.
 
-This would require segmenting a matrix into different areas that are similar to a low rank matrix. This also has to take into account that SSS matrices have many overlaying areas with low rank.
-
-Furthermore an Algorithm to combine different SSS Representations in a adequate way is needed.
-
-\subsubsection*{Theoretical considerations}
-To support this by theory it might be interesting to build some theoretical background on the decomposition.
-A first step is having a look at the formulas from state space arithmetic. While deriving closed form representations for cases with non matching dimensions might not be possible, it might give some insight.
-
-It should be tested if the SSS Matrices can be represented as a manifold. This might allow some theoretical results.
-Additionally it should be tested if it is possible to describe more complex objects like sums.
-This might make it possible to show something on how "dense" the representable matrices are in the space of all matrices.
-
-
-
 \subsubsection*{Computational cost}
-The computational cost of evaluation a matrix vector product is determined by the number of parameters.
+The computational cost of evaluation a matrix vector product is related to the number of parameters.
 For the SSS structure the number of multiplications is equal to the number of nonzero entries in the A,B,C and D matrices. These depend on the dimensions of the input and output and on the number of states.
 
-As we like to minimize the computational cost it will be necessary to setup a detailed formula for the computational cost depending on the structural parameter.
-
-
 \subsubsection*{Properties}
-The computational stability of the resulting algorithm should be tested numerically. This might be for further interest if it the evaluation is done on an 32-bit architecture.
+The properties of the representations should be tested in terms of computational cost, storage requirements and performance in neuronal nets.
+The computational stability of the resulting algorithm might be tested numerically. This might be for further interest if the evaluation is done on an 32-bit architecture.
+
+\section*{Some Results}
+
+\subsection*{Addition of Systems}
+One Idea was that the sum of two systems with different input and output dimensions might be able to represent a wider class of matrices.
+It is questionable that this class is far bigger as the relation 
+
+\begin{equation}
+	\rank(A) \leq \rank(H_1) + \rank(H_2) 
+\end{equation}
+holds true for all sub matrices that do not contain $D$-matrices.
+There might be some benefits in the close vicinity to the diagonal but it is unclear if this is relevant.
+
+TODO: question: decompose same dims into towo systems -> parallel computational cost?
+
+\subsection*{Changes to size of the input and output dimensions}
+I already programmed code to change the size of the inputs and outputs. The code also preserves minimality.
+In some cases this results in a increasing/decreasing state dimensions. This depends on the parts of $D$ that are included or excluded. 
+This does not depend on the rest of the matrix (Similar to the shift invariance principal).
+This might be different for cases where an later approximation is done.
+
+\section{Some Questions that came up}
+
+\subsection*{Approximation}
+An approximation of an system can be done using the hankel rank approximation. It is not clear how to represent an general Matrix using an aproximated system. 
+TODO: read about hankel rank approximation.
+If the implementation is balanced and the states are ordered with respect to the according $\sigma$s the state dimension can be reduced by simply dropping columns and rows from the matrices.   
+
+\subsection*{Importance of $D$}
+As there is no restriction of the $D$-Matrix it is quite versatile.
+It might be possible to permute them in a way that reveals a compatible structure.
+
+\section{Further Ideas:}
+
+\subsection*{Segmentation of Matrix}
+Derive an first informed guess on the segmentation based on a model of the expected hankerrank. This might first include a model with constant input and output dimensions. 
+%Maybe later different dimenstions
+After this move boundaries if this gives an computational advantage.
+
+\subsection*{Derive Permuataions}
+Use algorithm from todo to get a sparse + low rank representation.
+Then group the sparse elements and move them into the $D$ matrices.
+This also results in a segmentation (the order is still not determined)
+And the represent the permuted matrix using a system 
 
 
-\subsubsection*{Calculation of Representation}
-There are two possible ideas to get the wanted representation:
-
-\paragraph{Optimization Problem}
-Convert the given properties into manifolds and objective functions and use optimization techniques.
-This might be easier to define, but will possibly result in a problem with a very high number of dimensions. Maybe it is possible to express it as some standard problem, then it would be possible to use standard solvers and use existing guarantees and runtime estimates.
-
-\paragraph{Iterative Methods}
-Use an approach similar to Matching pursuit. Here the dictionary $D$ would be a subset of all Sequentially Semiseperable Matrices. This requires some description of a qasi-inner-product and an way to find an approximation of the closest element in $D$.
-As $D$ will have infinitely many dimensions, this might be quite involved.
+%\subsubsection*{Calculation of Representation}
+%There are two possible ideas to get the wanted representation:
+%
+%\paragraph{Optimization Problem}
+%Convert the given properties into manifolds and objective functions and use optimization techniques.
+%This might be easier to define, but will possibly result in a problem with a very high number of dimensions. Maybe it is possible to express it as some standard problem, then it would be possible to use standard solvers and use existing guarantees and runtime estimates.
+%
+%\paragraph{Iterative Methods}
+%Use an approach similar to Matching pursuit. Here the dictionary $D$ would be a subset of all Sequentially Semiseperable Matrices. This requires some description of a qasi-inner-product and an way to find an approximation of the closest element in $D$.
+%As $D$ will have infinitely many dimensions, this might be quite involved.
 
 
 
@@ -167,7 +198,7 @@ As $D$ will have infinitely many dimensions, this might be quite involved.
 		\end{itemize}
 	\item \textbf{Implementierung:} Implement Algorithm
 		\begin{itemize}
-			\item \textbf{Implement Algorithm(s):} Based on previous exploration choose algorithm to construct the representation. If uncertain implement two different approaches and try them on examples.
+			\item \textbf{Implement Algorithm(s):} Based on previous exploration implement tests and algorithms to construct the representation.
 			\item \textbf{Generate Tests:} Generate Testsdata and pipeline to test them, including meta-analysis (speed of convergence...)
 		\end{itemize}
 	\item \textbf{Analyse:} Entwurf und Durchführung praxisnaher Tests
