Excluded the D-matrices of the anticausal part in the cost
Symbolic aproximation of computational cost Computational_cost.ipynb
Some numerical experiments Test_matrices.ipynb

--- a/Code/Computational_cost.ipynb
+++ b/Code/Computational_cost.ipynb
@@ -323,7 +323,10 @@
    "outputs": [],
    "source": [
     "k = sp.symbols('k')\n",
-    "cost =nk1*nk+nk1*m+p*nk+p*m\n",
+    "#include D for anticausal part\n",
+    "#cost =nk1*nk+nk1*m+p*nk+p*m\n",
+    "# only include D once -> divide it by 2\n",
+    "cost =nk1*nk+nk1*m+p*nk+0.5*p*m\n",
     "cost_sum = sp.Sum(cost,(k,1,v))\n",
     "cost_sum"
    ]
