Changed implementation to be consistent with matrices as input

--- a/Code/Perforemnce_apply.ipynb
+++ b/Code/Perforemnce_apply.ipynb
@@ -140,9 +140,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp = np.random.rand(sum(sys.dims_in))\n",
+    "inp_vec = np.random.rand(sum(sys.dims_in))\n",
+    "inp_2d = inp_vec.reshape(-1,1)\n",
     "\n",
-    "x_ref,y_ref = sys.compute(inp.reshape(-1,1))\n"
+    "xin_vec=np.zeros((0))\n",
+    "xin_2d=np.zeros((0,1))\n",
+    "\n",
+    "x_ref,y_ref = sys.compute(inp_2d)\n"
    ]
   },
   {
@@ -159,7 +163,7 @@
    "outputs": [],
    "source": [
     "def compute(system,u,x_in):\n",
-    "    y = np.zeros(sum(sys.dims_out))\n",
+    "    y = np.zeros((sum(sys.dims_out),1))\n",
     "    di= system.dims_in\n",
     "    do= system.dims_out\n",
     "    x = x_in\n",
@@ -179,9 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xin=np.zeros((0))\n",
-    "y,x = compute(sys,inp,xin)\n",
-    "x_in_vec = xin"
+    "y,x = compute(sys,inp_2d,xin_2d)"
    ]
   },
   {
@@ -190,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.max(abs(y_ref.T-y))"
+    "np.max(abs(y_ref-y))"
    ]
   },
   {
@@ -200,7 +202,7 @@
    "outputs": [],
    "source": [
     "mat = sys.to_matrix()\n",
-    "np.max(abs(mat@inp-y))"
+    "np.max(abs(mat@inp_2d-y))"
    ]
   },
   {
@@ -218,7 +220,7 @@
    "source": [
     "@numba.jit\n",
     "def compute_numba(system,u,x_in):\n",
-    "    y = np.zeros(sum(sys.dims_out))\n",
+    "    y = np.zeros((sum(sys.dims_out),1))\n",
     "    di= system.dims_in\n",
     "    do= system.dims_out\n",
     "    x = x_in\n",
@@ -238,9 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xin_vec=np.zeros(0)\n",
-    "y,x = compute_numba(sys,inp,xin_vec)\n",
-    "np.max(abs(y_ref.T-y))"
+    "y,x = compute_numba(sys,inp_2d,xin_2d)\n",
+    "np.max(abs(y_ref-y))"
    ]
   },
   {
@@ -280,7 +281,7 @@
     "\n",
     "#@numba.jit(nopython=True)\n",
     "def compute_split(As,Bs,Cs,Ds,is_in,is_out,u,x_in):\n",
-    "    y = np.zeros(is_out[-1])\n",
+    "    y = np.zeros((is_out[-1],1))\n",
     "    x = x_in\n",
     "    for i in range(is_in.shape[0]-1):\n",
     "        y[is_out[i]:is_out[i+1]] = Cs[i]@x+Ds[i]@u[is_in[i]:is_in[i+1]]\n",
@@ -289,7 +290,7 @@
     "\n",
     "@numba.jit(nopython=True)\n",
     "def compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,u,x_in):\n",
-    "    y = np.zeros(is_out[-1])\n",
+    "    y = np.zeros((is_out[-1],1))\n",
     "    x = x_in\n",
     "    for i in range(is_in.shape[0]-1):\n",
     "        y[is_out[i]:is_out[i+1]] = Cs[i]@x+Ds[i]@u[is_in[i]:is_in[i+1]]\n",
@@ -304,9 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xin_2d=np.zeros((0,1))\n",
-    "y,x = compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp.reshape(-1,1),xin_2d)\n",
-    "print(np.max(abs(y_ref.T-y)))\n",
+    "y,x = compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp_2d,xin_2d)\n",
+    "print(np.max(abs(y_ref-y)))\n",
     "#compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp.reshape(-1,1),xin)"
    ]
   },
@@ -325,15 +325,15 @@
    "source": [
     "#time them\n",
     "print(\"matrix_vec:\")\n",
-    "print(timeit.timeit(lambda:mat@inp, number=1000))\n",
+    "print(timeit.timeit(lambda:mat@inp_2d, number=1000))\n",
     "print(\"regular:\")\n",
-    "print(timeit.timeit(lambda:sys.compute(inp.reshape(-1,1)), number=1000))\n",
+    "print(timeit.timeit(lambda:sys.compute(inp_2d), number=1000))\n",
     "print(\"simplifyied:\")\n",
-    "print(timeit.timeit(lambda:compute(sys,inp,x_in_vec), number=1000))\n",
+    "print(timeit.timeit(lambda:compute(sys,inp_2d,xin_2d), number=1000))\n",
     "print(\"simplifyied numba:\")\n",
-    "print(timeit.timeit(lambda:compute_numba(sys,inp,xin_2d), number=1000))\n",
+    "print(timeit.timeit(lambda:compute_numba(sys,inp_2d,xin_2d), number=1000))\n",
     "print(\"simplifyied and split numba:\")\n",
-    "print(timeit.timeit(lambda:compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp.reshape(-1,1),xin_2d), number=1000))\n"
+    "print(timeit.timeit(lambda:compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp_2d,xin_2d), number=1000))\n"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit sys.compute(inp.reshape(-1,1))"
+    "%timeit sys.compute(inp_2d)"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp,xin)"
+    "%timeit compute_numba_split(As,Bs,Cs,Ds,is_in,is_out,inp_2d,xin_2d)"
    ]
   },
   {
@@ -364,6 +364,16 @@
     "\n",
     "- no loop but only one stage\n",
     "- no addition "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp = inp_vec\n",
+    "xin=xin_vec"
    ]
   },
   {
@@ -385,28 +395,6 @@
     "    return y,x\n",
     "\n",
     "compute_numba_fixed_noadd(As,Bs,Cs,Ds,is_in,is_out,inp,xin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@numba.jit(nopython=True)\n",
-    "def compute_numba_printxin(As,Bs,Cs,Ds,is_in,is_out,u,x_in):\n",
-    "    y = np.zeros(is_out[-1])\n",
-    "    x = x_in\n",
-    "    print(x)\n",
-    "    i = 0\n",
-    "    #y[is_out[i]:is_out[i+1]] = Ds[i]@u[is_in[i]:is_in[i+1]]\n",
-    "    y[is_out[i]:is_out[i+1]] = Cs[i]@x\n",
-    "    x =                        Bs[i]@u[is_in[i]:is_in[i+1]]\n",
-    "    #x =                        As[i]@x\n",
-    "    print(y)\n",
-    "    return y,x\n",
-    "\n",
-    "compute_numba_printxin(As,Bs,Cs,Ds,is_in,is_out,inp,xin)"
    ]
   },
   {
@@ -449,7 +437,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.dot?"
+    "G = np.zeros((3,0))\n",
+    "\n",
+    "m = np.zeros((0,1))\n",
+    "\n",
+    "\n",
+    "@numba.jit(nopython=True)\n",
+    "def test_numba(G,m):\n",
+    "    l = G@m\n",
+    "    return l\n",
+    "test_numba(G,m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G@m"
    ]
   },
   {
