Updated Project Plan

--- a/ProjectPlan/Relevant.bib
+++ b/ProjectPlan/Relevant.bib
@@ -79,3 +79,29 @@
 	keywords = {Data models, Convex Relaxation, Correlation, Face, Low Rank Modeling, Matrix decomposition, Multi-scale Modeling, Signal Decomposition, Sparse matrices, Structured Matrix, Transforms, Videos},
 	file = {IEEE Xplore Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/QVP6LF3E/Ong und Lustig - 2016 - Beyond Low Rank + Sparse Multiscale Low Rank Matr.pdf:application/pdf;IEEE Xplore Abstract Record:/home/stephan/snap/zotero-snap/common/Zotero/storage/2QTYFERC/7439735.html:text/html},
 }
+
+
+@inproceedings{ulfarsson_sparse_2015,
+	title = {Sparse and low rank decomposition using l0 penalty},
+	doi = {10.1109/ICASSP.2015.7178584},
+	abstract = {High dimensional data is often modeled as a linear combination of a sparse component, a low-rank component, and noise. An example is a video sequence of a busy scene where the background is the low-rank part and the foreground, e.g. moving pedestrians, is the sparse part. Sparse and low rank ({SLR}) matrix decomposition is a recent method that estimates those components. In this paper we develop an l0 based {SLR} method and an associated tuning parameter selection method based on the extended Bayesian information criterion ({EBIC}) method. In simulations the new algorithm is compared with state of the art algorithms from the literature.},
+	eventtitle = {2015 {IEEE} International Conference on Acoustics, Speech and Signal Processing ({ICASSP})},
+	pages = {3312--3316},
+	booktitle = {2015 {IEEE} International Conference on Acoustics, Speech and Signal Processing ({ICASSP})},
+	author = {Ulfarsson, M.O. and Solo, V. and Marjanovic, G.},
+	date = {2015-04},
+	note = {{ISSN}: 2379-190X},
+	keywords = {Matrix decomposition, Sparse matrices, Cyclic Descent, Extended {BIC}, Indexes, l0 penalty, Noise, Noise measurement, Principal component analysis, Sparse and Low Rank Matrix Decomposition, Tuning},
+	file = {IEEE Xplore Abstract Record:/home/stephan/snap/zotero-snap/common/Zotero/storage/TKYI37MD/7178584.html:text/html;Ulfarsson et al. - 2015 - Sparse and low rank decomposition using l0 penalty.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/IX4ADKG8/Ulfarsson et al. - 2015 - Sparse and low rank decomposition using l0 penalty.pdf:application/pdf},
+}
+
+@inproceedings{yu_compressing_2017,
+	title = {On Compressing Deep Models by Low Rank and Sparse Decomposition},
+	url = {https://openaccess.thecvf.com/content_cvpr_2017/html/Yu_On_Compressing_Deep_CVPR_2017_paper.html},
+	eventtitle = {Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition},
+	pages = {7370--7379},
+	author = {Yu, Xiyu and Liu, Tongliang and Wang, Xinchao and Tao, Dacheng},
+	urldate = {2021-11-23},
+	date = {2017},
+	file = {Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/QQT5PMEQ/Yu_On_Compressing_Deep_CVPR_2017_paper.html:text/html;Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/2ABSW4SD/Yu et al. - 2017 - On Compressing Deep Models by Low Rank and Sparse .pdf:application/pdf},
+}
