Expand the spectra investigations

--- a/Code/Explore_matrix.ipynb
+++ b/Code/Explore_matrix.ipynb
@@ -337,6 +337,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "N = 10\n",
+    "fig = plt.figure(figsize=(16,16))\n",
+    "axs = fig.subplots(6, 6)\n",
+    "\n",
+    "def calc_spectra_hankel(A,shape = np.array([10,10])):  \n",
+    "    #Sigmas = np.zeros((N,shape.min()))\n",
+    "    #for i in range(N):\n",
+    "    u, s, vh = np.linalg.svd(A[-shape[0]:,:shape[1]])\n",
+    "        #Sigmas[i,:]=s\n",
+    "    return s\n",
+    "\n",
+    "shapes = np.array([50,100,200,250,500,800])\n",
+    "for i,a in np.ndenumerate(axs):\n",
+    "    shape=np.array([shapes[i[1]],shapes[i[0]]])\n",
+    "    #add 2 plots to get an idea of the variance\n",
+    "    #Sigmas = calc_spectra_hankel(mats[0],N=N,shape=shape,direc=+1)\n",
+    "    #a.hist(Sigmas.flatten(), bins=100,alpha = 0.5)\n",
+    "    Sigmas = calc_spectra_hankel(mats[0],shape=shape)\n",
+    "    a.hist(Sigmas.flatten(), bins=100,alpha = 0.5)\n",
+    "    text=\"h=\"+str(shape[0])+\" w=\"+str(shape[1])\n",
+    "    a.set_title(text, fontsize=10,x=0.6, y=0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
